--- a/static/style.css
+++ b/static/style.css
@@ -66,6 +66,7 @@ header {
 
 .btn {
   margin-top: 3%;
+  margin-bottom: 3%;
   position: relative;
   text-decoration: none;
   border: none;
@@ -104,7 +105,7 @@ a:hover {
   color: black;
 }
 
-form {
+.uploadForm {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -113,9 +114,55 @@ form {
   padding: 1%;
 }
 
+.hiddenForm {
+  margin: 1%;
+}
+
 input {
   border: 2px solid white;
   border-radius: 5px;
   width: 100%;
   padding: 5px;
+}
+
+.videoBtn {
+  border-radius: 20px;
+  text-decoration: none;
+  border: none;
+}
+
+.videoContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+}
+
+.singleVideo {
+  width: 60%;
+}
+
+.comments {
+  margin: 2%;
+  display: flex;
+  justify-content: center;
+}
+
+.commentsTable {
+  background-color: white;
+  color: black;
+  width: 80%;
+  padding: 2%;
+  border-radius: 5px;
+}
+
+.commentForm input {
+  border: 2px solid black;
+}
+
+.commentBtn {
+  width: 20%;
+}
+
+.commentBtn:hover {
+  color: black;
 }
