--- a/static/style.css
+++ b/static/style.css
@@ -14,23 +14,7 @@ body {
   background-size: cover;
 }
 
-.container {
-  margin-top: 3%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.video {
-  margin: 1% 0 0.5% 0;
-}
-
-video {
-  width: 400px;
-  border: 2px solid white;
-  border-radius: 20px;
-}
-
+/* Navbar */
 header {
   background-color: white;
   display: flex;
@@ -38,6 +22,7 @@ header {
   position: sticky;
   top: 0;
   box-shadow: 2px 0 4px black;
+  z-index: 3;
 }
 
 .logo {
@@ -63,7 +48,52 @@ header {
   color: rgb(253, 55, 55);
   border-bottom: 4px solid rgb(253, 55, 55);
 }
+/* End Navbar */
 
+/* All Containers */
+.container {
+  margin-top: 3%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.formContainer {
+  background-color: rgba(197, 183, 183, 0.9);
+  width: 80vw;
+  margin: auto auto;
+  margin-top: 8%;
+  display: block;
+  padding: 2%;
+  border-radius: 20px;
+  box-shadow: 3px 5px 9px 1px white;
+  color: black;
+}
+
+.videoContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+}
+
+.tagFormContainer {
+  display: block;
+}
+/* End Containers */
+
+/* Videos */
+.video {
+  margin: 1% 0 0.5% 0;
+}
+
+video {
+  width: 400px;
+  border: 2px solid white;
+  border-radius: 20px;
+}
+/* End Videos */
+
+/* All Buttons */
 .btn {
   margin-top: 3%;
   margin-bottom: 3%;
@@ -87,24 +117,26 @@ header {
   width: 100%;
 }
 
-a,
-a:hover {
+.videoBtn {
+  border-radius: 20px;
   text-decoration: none;
-  color: white;
+  border: none;
 }
 
-.formContainer {
-  background-color: rgba(197, 183, 183, 0.9);
-  width: 80vw;
-  margin: auto auto;
-  margin-top: 8%;
-  display: block;
-  padding: 2%;
-  border-radius: 20px;
-  box-shadow: 3px 5px 9px 1px white;
+.commentBtn {
+  width: 20%;
+}
+
+.commentBtn:hover {
   color: black;
 }
 
+.tagFormBtn {
+  margin: 0 0 1% 7%;
+}
+/* End Buttons */
+
+/* All Forms */
 .uploadForm {
   display: flex;
   flex-direction: column;
@@ -118,23 +150,88 @@ a:hover {
   margin: 1%;
 }
 
+.commentForm input {
+  border: 2px solid black;
+}
+
+.tagForm {
+  padding: 2%;
+}
+
+.tagForm select {
+  width: 85%;
+  margin-bottom: 8px;
+  border-radius: 20px;
+  border: none;
+  padding: 1%;
+  font-size: 1em;
+}
+/* End Forms */
+
+/* Footer */
+footer {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  color: white;
+  font-size: 0.5rem;
+  padding: 2%;
+  border-top: 3px solid white;
+  margin-top: 2%;
+}
+
+.left {
+  flex-basis: 25vw;
+}
+
+.mid {
+  flex-basis: 50vw;
+  text-align: center;
+}
+
+.footerLogo {
+  color: rgb(253, 55, 55);
+  font-size: 2rem;
+  padding: 3%;
+}
+
+.footerText {
+  color: gray;
+  font-size: 0.75rem;
+  margin-top: 2%;
+}
+
+.right {
+  flex-basis: 25vw;
+  padding: 3%;
+  text-align: center;
+}
+
+.followHeader {
+  text-decoration: underline;
+  margin-bottom: 2%;
+}
+
+.social {
+  margin: 5%;
+  font-size: 0.6rem;
+}
+/* End Footer */
+
+/* Miscellaneous */
+a,
+a:hover {
+  text-decoration: none;
+  color: white;
+}
+
 input {
   border: 2px solid white;
   border-radius: 5px;
   width: 100%;
   padding: 5px;
-}
-
-.videoBtn {
-  border-radius: 20px;
-  text-decoration: none;
-  border: none;
-}
-
-.videoContainer {
-  display: flex;
-  justify-content: center;
-  margin-top: 3%;
 }
 
 .singleVideo {
@@ -154,15 +251,4 @@ input {
   padding: 2%;
   border-radius: 5px;
 }
-
-.commentForm input {
-  border: 2px solid black;
-}
-
-.commentBtn {
-  width: 20%;
-}
-
-.commentBtn:hover {
-  color: black;
-}
+/* End Miscellaneous */
