--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,52 @@ body {
   background-size: cover;
 }
 
+/* Mobile Navbar */
+.mobile-container {
+  margin: auto;
+  color: white;
+  border-radius: 10px;
+  position: sticky;
+  top: 0;
+  display: none;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: white;
+  position: relative;
+}
+
+.topnav #myLinks {
+  display: none;
+}
+
+.topnav a {
+  color: black;
+  padding: 14px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.topnav a.icon {
+  background: white;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: white;
+  color: rgb(253, 55, 55);
+}
+/* End Mobile Navbar */
+
 /* Navbar */
 header {
   background-color: white;
@@ -133,6 +179,7 @@ video {
 
 .tagFormBtn {
   margin: 0 0 1% 7%;
+  color: white;
 }
 /* End Buttons */
 
@@ -252,3 +299,21 @@ input {
   border-radius: 5px;
 }
 /* End Miscellaneous */
+
+/* Media Queries */
+@media only screen and (max-width: 1100px) {
+  .header {
+    display: none;
+  }
+
+  .mobile-container {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  video {
+    width: 100%;
+    margin: 1% 0 1% 0;
+  }
+}
